# rss2020-team9

./: README.md
final_challenge-master/: README.md
final_challenge-master/final_challenge/: CMakeLists.txt  package.xml
final_challenge-master/final_challenge/launch/: avoid.launch  example.launch  fast_obstacle.launch  final.launch  final_race.launch  follow_trajectory.launch  obstacle_detection.launch  setup.launch
final_challenge-master/final_challenge/src/: obstacle_detection.py  path_planning_obstacle.py  pure_pursuit_obstacle_avoidance.py
labs/: index.html
labs/3/: index.html
labs/4/: index.html
labs/5/: index.html
labs/6/: index.html
labs/final/: index.html
localization-master/: README.md  params.yaml  solution.ipynb
localization-master/launch/: localize_real_env.launch  localize_simulation.launch  localize_tesse.launch  racecar_model.launch
localization-master/src/: motion_model.py  particle_filter.py  scan_simulator_2d.cpp  sensor_model.py  utils.py
path_planning-master/: README.md
path_planning-master/launch/: follow_trajectory.launch  load_trajectory.launch  load_trajectory.launch~
path_planning-master/src/: path_planning.py  pure_pursuit.py  pure_pursuit.py~  trajectory_builder.py  trajectory_loader.py
path_planning-master/trajectories/: NO.traj  OBBIES.traj  final_challenge.traj
safety-master/: CMakeLists.txt  README.md  package.xml  params.yaml
safety-master/data/: wall_ranges.npz
safety-master/launch/: safety.launch
safety-master/src/: safety.py
visual_servoing-master/launch/: cone_detector.launch
(+10 files in other folders)
