<?xml version="1.0"?>
<package>
  <name>final_challenge</name>
  <version>0.0.0</version>
  <description>MIT RSS 2020 final challenge</description>

  <maintainer email="someone@example.com">Joe</maintainer>
  
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>map_server</run_depend>
</package>
